--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 beautifulsoup4==4.13.5
 Django==4.2.24
 django-bootstrap-v5==1.0.11
+djangorestframework==3.14.0
 psycopg2-binary==2.9.10
 soupsieve==2.8
 sqlparse==0.5.3
