--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       - EMAIL_USE_TLS=${EMAIL_USE_TLS}
       - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
       - KONG_ADMIN_URL=${KONG_ADMIN_URL}
+    env_file:
+      - .env
+
   django2:
     build: .
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8081"
