--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,12 @@ services:
       - EMAIL_USE_TLS=${EMAIL_USE_TLS}
       - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
       - KONG_ADMIN_URL=${KONG_ADMIN_URL}
+      - AUTHZ_DOMAIN=${AUTHZ_DOMAIN}
+      - AUTHZ_AUDIENCE=${AUTHZ_AUDIENCE}
+      - CLIENT_ID=${CLIENT_ID}
+      - CLIENT_SECRET=${CLIENT_SECRET}
+      - INTEGRITY_KEY=${INTEGRITY_KEY}
+      - RECALCULAR_HASH=${RECALCULAR_HASH}
     env_file:
       - .env
 
@@ -45,10 +51,10 @@ services:
     depends_on:
       - postgres
     environment:
-      - DJANGO_DB_HOST=postgres
-      - DJANGO_DB_NAME=inventario_db
-      - DJANGO_DB_USER=inventario_user
-      - DJANGO_DB_PASSWORD=inventario_pass
+      - DJANGO_DB_HOST=${DJANGO_DB_HOST}
+      - DJANGO_DB_NAME=${DJANGO_DB_NAME}
+      - DJANGO_DB_USER=${DJANGO_DB_USER}
+      - DJANGO_DB_PASSWORD=${DJANGO_DB_PASSWORD}
       - ALERT_EMAIL=${ALERT_EMAIL}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
@@ -56,7 +62,13 @@ services:
       - EMAIL_PORT=${EMAIL_PORT}
       - EMAIL_USE_TLS=${EMAIL_USE_TLS}
       - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
-      - KONG_ADMIN_URL=http://kong:8005
+      - KONG_ADMIN_URL=${KONG_ADMIN_URL}
+      - AUTHZ_DOMAIN=${AUTHZ_DOMAIN}
+      - AUTHZ_AUDIENCE=${AUTHZ_AUDIENCE}
+      - CLIENT_ID=${CLIENT_ID}
+      - CLIENT_SECRET=${CLIENT_SECRET}
+      - INTEGRITY_KEY=${INTEGRITY_KEY}
+      - RECALCULAR_HASH=${RECALCULAR_HASH}
   django3:
     build: .
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8082"
@@ -67,10 +79,10 @@ services:
     depends_on:
       - postgres
     environment:
-      - DJANGO_DB_HOST=postgres
-      - DJANGO_DB_NAME=inventario_db
-      - DJANGO_DB_USER=inventario_user
-      - DJANGO_DB_PASSWORD=inventario_pass
+      - DJANGO_DB_HOST=${DJANGO_DB_HOST}
+      - DJANGO_DB_NAME=${DJANGO_DB_NAME}
+      - DJANGO_DB_USER=${DJANGO_DB_USER}
+      - DJANGO_DB_PASSWORD=${DJANGO_DB_PASSWORD}
       - ALERT_EMAIL=${ALERT_EMAIL}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
@@ -78,7 +90,13 @@ services:
       - EMAIL_PORT=${EMAIL_PORT}
       - EMAIL_USE_TLS=${EMAIL_USE_TLS}
       - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
-      - KONG_ADMIN_URL=http://kong:8005
+      - KONG_ADMIN_URL=${KONG_ADMIN_URL}
+      - AUTHZ_DOMAIN=${AUTHZ_DOMAIN}
+      - AUTHZ_AUDIENCE=${AUTHZ_AUDIENCE}
+      - CLIENT_ID=${CLIENT_ID}
+      - CLIENT_SECRET=${CLIENT_SECRET}
+      - INTEGRITY_KEY=${INTEGRITY_KEY}
+      - RECALCULAR_HASH=${RECALCULAR_HASH}
 
   monitor:
     build: .
